fixed layout issue; consolidated enums (#37)

--- a/src-ui/index.css
+++ b/src-ui/index.css
@@ -24,7 +24,7 @@
 body {
   display: grid;
   grid-template-columns: auto 10fr;
-  grid-template-rows: 1fr auto;
+  grid-template-rows: auto 1fr;
   height: 100vh;
   margin: 0;
   padding: 0;
